# CMAPSS-Jet-Engine-RUL-Prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/data/: make_dataset.py
