[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CMAPSS-Jet-Engine-RUL-Prediction"
version = "0.0.1"
description = "Train a ML model to predict the Remaining Useful Life (RUL) of engines based on sensor data and operational information. This will enable proactive maintenance and prevent unexpected failures."
authors = [
  { name = "Safia TIFOUR" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.14"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["CMAPSS-Jet-Engine-RUL-Prediction"]
force_sort_within_sections = true
